infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: mg-devops

  labels:
    project: mg-devops
    environment: dev
