infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: consumer-ssr
  namespace: mg-devops

  labels:
    app: consumer-ssr

spec:
  replicas: 3

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: consumer-ssr

  template:
    metadata:
      labels:
        app: consumer-ssr

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: consumer-ssr

          image: 149828426205.dkr.ecr.us-east-1.amazonaws.com/mg-devops-dev-ecr

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              name: http
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          terminationMessagePolicy: FallbackToLogsOnError
